tests/NormalTests/paczka1/small_fuzzy/98388324.err
Error in line 1: hOQPtBdrmIZ S989 11,5
Error in line 11: VLctE7 S175 33,3
